feat(plc4j/opcua): authenticate with an X509 user certificate (GH-1845)